# doomer-delta

./: .gitattributes  .gitignore  .mcp.json  ANALYSIS_INDEX.md  CLAUDE.md  CODE_COMPARISON.md  OPTIMIZATION_DETAILS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_COMPARISON.txt  PERFORMANCE_SUMMARY.txt  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: claude.yml
convex/: edges.ts  models.ts  nodes.ts  schema.ts  testingFunctions.ts  users.ts
convex/_generated/: api.d.ts
convex/shared/: cptValidation.ts
e2e/: app.spec.ts
src/: index.css  routeTree.gen.ts
src/components/: CPTEditor.tsx  DeleteModelDialog.tsx  ErrorBoundary.tsx  GraphEditor.tsx  LogoIcon.tsx  ModelCard.tsx  SensitivityPanel.tsx  ShareDialog.tsx  ToastContext.tsx
src/hooks/: useInferenceWorker.ts
src/lib/: bayesianInference.ts  formatProbability.ts  probabilisticFingerprint.ts
src/routes/: __root.tsx  index.tsx  models.$modelId.tsx  models.my.tsx  models.public.tsx
src/types/: workerMessages.ts
src/workers/: inference.bench.ts  inference.worker.test.ts  inference.worker.ts
wasm-inference/: Cargo.toml
wasm-inference/pkg/: package.json  wasm_inference.d.ts  wasm_inference.js  wasm_inference_bg.js  wasm_inference_bg.wasm  wasm_inference_bg.wasm.d.ts
wasm-inference/src/: bit_set.rs  lib.rs  sample.rs  serialize.rs
