[package]
name = "wasm-inference"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
rand = { version = "0.9", default-features = false }
rand_xoshiro = "0.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
winnow = "0.7.13"
anyhow = "1.0.100"
